--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,4 +1,11 @@
 <div>
-  <h1 class="font-bold text-4xl">Home#top</h1>
+  <h1 class="font-bold text-4xl bg-blue-100 bg">Home#top</h1>
   <p>Find me in app/views/home/top.html.erb</p>
+</div>
+<div class="text-sm breadcrumbs">
+  <ul>
+    <li><a>Home</a></li>
+    <li><a>Documents</a></li>
+    <li>Add Document</li>
+  </ul>
 </div>
