--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -9,3 +9,7 @@
     <li>Add Document</li>
   </ul>
 </div>
+<button class="btn btn-primary">Button</button>
+<h1 class="text-3xl font-bold underline">
+  Hello world!
+</h1>
